<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="NameBean"
            type="com.example.kotlinstudy.bean.TestNameBean" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".basic_study.AboutMeActivity">
        <!--        android:text="@string/about_me_title"-->
        <TextView
            android:id="@+id/textvie"
            style="@style/AboutMeActivityTitleStyle"
            android:text="@={NameBean.name}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/abhaya_libre_bold"
            android:text="阳 摘抄赠 小新美人"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/AboutMeActivityTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@={NameBean.name}"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_name"
            style="@style/AboutMeActivityTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/abhaya_libre_bold"
            android:hint="@string/What_is_your_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_done"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_black"
            android:text="@string/done" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/about_me_yellow_start"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                style="@style/AboutMeActivityTitleStyle"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.2"
                android:paddingBottom="20dp"
                android:text="@string/poem_text" />
        </ScrollView>


    </LinearLayout>
</layout>
